    - Once boss spawner revealed, launching additional Psi Tracking Satellite will not spawn new boss until the existing boss has either killed or despawned.
    - The map chunk where the boss sit is revealed to players.
    - Boss sends out elite attack group periodically. (approx twice per nauvis day)
    - Boss fires artillery periodically. (approx twice per nauvis day)
    - Boss performs various attacks when it takes damage.
    - When the boss is defeated, infinity chest(s) with items will spawn for 14 nauvis days. (appox 1.5hr game time)
    - When you don't defeat the boss when the timer end, it releases super attacks to your base!
    - ----- End Boss Framework -----
    - ----- Player Army Frameworks -----
    - The player army frameworks only apply to ERM - Terran at the moment.
    - ----- Population Framework -----
    - Base Max Population is 150. Max pop can be increased with Follower Combat Drone research at 1:1 ratio.
    - Each unit can have different population value. E.g 1 for marine, 2 for tank/wraith, 5 for battlecruiser.
    - ----- End Population Framework -----
    - ----- Deployment Framework -----
    - Build a deployer (styled assembling machines)
    - deployer is now required to build unit from scratch. It can also deploy built units.
    - Deployer deploy units when total population under player set threshold and max population.
    - ----- End Deployment Framework -----
    - ----- Teleportation Framework -----
    - Build 2 command centers (styled radars)
    - Select "from" and "to" CC to link them
    - Move your units to "from" CC, indicated by green outline
    - Active CC scans player units to teleport every 15 seconds. 24 units per batch. Up to 96 units per minute.
    - ----- End Teleportation Framework -----
    - ----- End Player Army Frameworks -----
    - Added post process package for some indexes. Requires "Enemy Race Manager - Post Process" package.


  Graphics: