@@ -115,7 +115,7 @@ ErmConfig.CONFIG_CACHE_LENGTH = 5 * defines.time.minute
 ErmConfig.CONFIG_CACHE_SIZE = 1000
 if DEBUG_MODE then
     ErmConfig.CONFIG_CACHE_LENGTH = 1 * defines.time.minute
-    ErmConfig.CONFIG_CACHE_SIZE = 128
+    ErmConfig.CONFIG_CACHE_SIZE = 256
 end
 
 ErmConfig.FFA_MULTIPLIER = 10
